# skia-plain-text-editor

./: Cargo.toml  README.md
src/: app.rs  editor.rs  main.rs  shape.rs
