[package]
name = "skia-plain-text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3"
skia = { package = "skia-safe", version = "0.71", features = ["textlayout"] }
softbuffer = "0.4"
winit = { version = "0.29", features = ["rwh_06"] }